src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhF500-b-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 283 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 283 × 500, bounds: 1231 × 680, states: [Activated]
